# tanmatsu-ssh-hamilton

./: .gitignore  CMakeLists.txt  Makefile  README.md
components/badgeteam__terminal-emulator/: console.c
components/badgeteam__terminal-emulator/include/: console.h
components/gui/: CMakeLists.txt  gui_chat_render.c  gui_element_cyberdeck.c  gui_menu.c  gui_menu_render.c
components/gui/include/: gui_chat.h  gui_element_cyberdeck.h  gui_element_progressbar.h  gui_menu.h
main/: CMakeLists.txt  icons.c  icons.h  idf_component.yml  main.c  menu_ssh.c  menu_ssh_edit.c  message_dialog.c  settings_ssh.c  settings_ssh.h  textedit.c  util_ssh.c  util_ssh.h
main/common/: display.c  display.h  theme.c  theme.h
metadata/: metadata.json
